LINXFIVE-2025: Add support for XFA forms to PdfOperations Reviewer: JC

--- a/tests/Pdf.Tests/Pdf.Tests.csproj
+++ b/tests/Pdf.Tests/Pdf.Tests.csproj
@@ -91,6 +91,8 @@
     <EmbeddedResource Include="ReadPdf\Resources\InferFieldsXFA.pdf" />
     <EmbeddedResource Include="ReadPdf\Resources\Signature.pdf" />
     <EmbeddedResource Include="ReadPdf\Resources\Text.pdf" />
+    <EmbeddedResource Include="PdfOperations\Resources\FillFormXFA.pdf" />
+    <EmbeddedResource Include="PdfOperations\Resources\SignXFA.pdf" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\Pdf\Pdf.csproj">
