--- a/src/Pdf/Pdf.csproj
+++ b/src/Pdf/Pdf.csproj
@@ -48,12 +48,12 @@
     <Reference Include="System.Xml.Linq" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Xml" />
-    <Reference Include="Twenty57.Linx.Plugin.Common, Version=15.0.7.222, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\packages\Twenty57.Linx.Plugin.Common.15.0.7.222\lib\net45\Twenty57.Linx.Plugin.Common.dll</HintPath>
+    <Reference Include="Twenty57.Linx.Plugin.Common, Version=16.0.0.224, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Twenty57.Linx.Plugin.Common.16.0.0.224\lib\net45\Twenty57.Linx.Plugin.Common.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Twenty57.Linx.Plugin.UI, Version=15.0.7.222, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\packages\Twenty57.Linx.Plugin.UI.15.0.7.222\lib\net45\Twenty57.Linx.Plugin.UI.dll</HintPath>
+    <Reference Include="Twenty57.Linx.Plugin.UI, Version=16.0.0.224, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Twenty57.Linx.Plugin.UI.16.0.0.224\lib\net45\Twenty57.Linx.Plugin.UI.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="WindowsBase" />
@@ -158,10 +158,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Resource Include="PdfOperationsProvider.xaml">
-      <SubType>Designer</SubType>
-    </Resource>
-    <Resource Include="ReadPdfProvider.xaml">
+    <Resource Include="PluginIcon.xaml">
       <SubType>Designer</SubType>
     </Resource>
   </ItemGroup>
