--- a/src/Pdf/Pdf.csproj
+++ b/src/Pdf/Pdf.csproj
@@ -63,13 +63,23 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChangeProtection\ChangeProtectionCodeGenerator.cs" />
+    <Compile Include="ChangeProtection\ChangeProtectionDesigner.cs" />
+    <Compile Include="ChangeProtection\ChangeProtectionProvider.cs" />
+    <Compile Include="ChangeProtection\Templates\ChangeProtectionTemplate.cs">
+      <DependentUpon>ChangeProtectionTemplate.tt</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="ChangeProtection\Templates\ChangeProtectionTemplateData.cs" />
     <Compile Include="Common\AuthenticationType.cs" />
+    <Compile Include="Common\PdfDesigner.cs" />
+    <Compile Include="Common\PropertyNames.cs" />
     <Compile Include="Common\TypeResolver.cs" />
     <Compile Include="Common\Validators\CertificateAuthenticationValidator.cs" />
     <Compile Include="Extensions\FunctionDataExtensions.cs" />
     <Compile Include="Extensions\PropertyCollectionExtensions.cs" />
     <Compile Include="Extensions\SerializationInfoExtensions.cs" />
-    <Compile Include="FillForm\PropertyNames.cs" />
     <Compile Include="FillForm\FillFormCodeGenerator.cs" />
     <Compile Include="FillForm\FillFormDesigner.cs" />
     <Compile Include="FillForm\FillFormProvider.cs" />
@@ -214,6 +224,12 @@
     <None Include="FillForm\Templates\FillFormTemplate.tt">
       <Generator>TextTemplatingFilePreprocessor</Generator>
       <LastGenOutput>FillFormTemplate.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ChangeProtection\Templates\ChangeProtectionTemplate.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>ChangeProtectionTemplate.cs</LastGenOutput>
     </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
