--- a/src/Pdf/Pdf.csproj
+++ b/src/Pdf/Pdf.csproj
@@ -63,6 +63,17 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddWatermark\AddWatermarkCodeGenerator.cs" />
+    <Compile Include="AddWatermark\AddWatermarkDesigner.cs" />
+    <Compile Include="AddWatermark\AddWatermarkProvider.cs" />
+    <Compile Include="AddWatermark\Constants.cs" />
+    <Compile Include="AddWatermark\Templates\AddWatermarkTemplate.cs">
+      <DependentUpon>AddWatermarkTemplate.tt</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="AddWatermark\Templates\AddWatermarkTemplateData.cs" />
+    <Compile Include="AddWatermark\WatermarkPosition.cs" />
     <Compile Include="ChangeProtection\ChangeProtectionCodeGenerator.cs" />
     <Compile Include="ChangeProtection\ChangeProtectionDesigner.cs" />
     <Compile Include="ChangeProtection\ChangeProtectionProvider.cs" />
@@ -224,7 +235,6 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <None Include="FillForm\Templates\FillFormTemplate.tt">
       <Generator>TextTemplatingFilePreprocessor</Generator>
@@ -235,6 +245,12 @@
     <None Include="ChangeProtection\Templates\ChangeProtectionTemplate.tt">
       <Generator>TextTemplatingFilePreprocessor</Generator>
       <LastGenOutput>ChangeProtectionTemplate.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="AddWatermark\Templates\AddWatermarkTemplate.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>AddWatermarkTemplate.cs</LastGenOutput>
     </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
