--- a/tests/Pdf.Tests/Pdf.Tests.csproj
+++ b/tests/Pdf.Tests/Pdf.Tests.csproj
@@ -55,6 +55,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddWatermark\TestAddWatermark.cs" />
     <Compile Include="ChangeProtection\TestChangeProtection.cs" />
     <Compile Include="Common\FileAuthentication.cs" />
     <Compile Include="Common\PdfComparer.cs" />
@@ -111,6 +112,8 @@
     <EmbeddedResource Include="FillForm\Resources\FillForm.pdf" />
     <EmbeddedResource Include="FillForm\Resources\FillFormXFA.pdf" />
     <EmbeddedResource Include="ChangeProtection\Resources\Protect.pdf" />
+    <EmbeddedResource Include="AddWatermark\Resources\Watermark.pdf" />
+    <EmbeddedResource Include="AddWatermark\Resources\Overlay.pdf" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
