Story: Remove unused nuspec elements

--- a/src/Pdf/Pdf.nuspec
+++ b/src/Pdf/Pdf.nuspec
@@ -5,18 +5,7 @@
 		<title>Pdf</title>
 		<version>$version$</version>
 		<authors>$author$</authors>
-		<description>A collection of functions for creating and modifying PDF documents.
-
-Functions in package:
-ReadPdf - Reads text, signatures and form data from a PDF document.
-PdfOperations - Provides the following operations for modifying PDF documents:
-                - Digitally signing documents
-                - Splitting and concatenating documents
-                - Adding watermarks
-                - Adding or removing document protection
-                - Filling in forms
-		</description>
+		<description>$id$</description>
 		<tags>pdf read sign concatenate split watermark protect form</tags>
-		<language>en-US</language>
 	</metadata>
 </package>
