Story: LINXFIVE-2539: ReadPDF result different to that produced by Linx4 Reviewer: JC

--- a/src/Pdf/Pdf.csproj
+++ b/src/Pdf/Pdf.csproj
@@ -170,6 +170,7 @@
     <Compile Include="PdfOperations\Templates\FillFormTemplateData.cs" />
     <Compile Include="PdfOperations\SignaturePosition.cs" />
     <Compile Include="PdfOperations\WatermarkPosition.cs" />
+    <Compile Include="ReadPdf\Helpers\TopToBottomTextExtractionStrategy.cs" />
     <Compile Include="ReadPdf\Constants.cs" />
     <Compile Include="ReadPdf\ReadPdfProvider.cs" />
     <Compile Include="ReadPdf\ReadPdfCodeGenerator.cs" />
@@ -284,7 +285,6 @@
       <LastGenOutput>AddWatermarkTemplate.cs</LastGenOutput>
     </None>
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <None Include="Split\Templates\SplitTemplate.tt">
       <Generator>TextTemplatingFilePreprocessor</Generator>
