--- a/tests/Pdf.Tests/Pdf.Tests.csproj
+++ b/tests/Pdf.Tests/Pdf.Tests.csproj
@@ -47,11 +47,11 @@
     <Reference Include="System.Xml.Linq" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Xml" />
-    <Reference Include="Twenty57.Linx.Plugin.Common, Version=17.0.13.265, Culture=neutral, PublicKeyToken=d7f03d358506bc3d, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Twenty57.Linx.Plugin.Common.17.0.13.265\lib\net471\Twenty57.Linx.Plugin.Common.dll</HintPath>
+    <Reference Include="Twenty57.Linx.Plugin.Common, Version=17.0.14.267, Culture=neutral, PublicKeyToken=d7f03d358506bc3d, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Twenty57.Linx.Plugin.Common.17.0.14.267\lib\net471\Twenty57.Linx.Plugin.Common.dll</HintPath>
     </Reference>
-    <Reference Include="Twenty57.Linx.Plugin.TestKit, Version=17.0.13.265, Culture=neutral, PublicKeyToken=d7f03d358506bc3d, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Twenty57.Linx.Plugin.TestKit.17.0.13.265\lib\net471\Twenty57.Linx.Plugin.TestKit.dll</HintPath>
+    <Reference Include="Twenty57.Linx.Plugin.TestKit, Version=17.0.14.267, Culture=neutral, PublicKeyToken=d7f03d358506bc3d, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Twenty57.Linx.Plugin.TestKit.17.0.14.267\lib\net471\Twenty57.Linx.Plugin.TestKit.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -119,6 +119,7 @@
     <EmbeddedResource Include="AddWatermark\Resources\Overlay.pdf" />
     <EmbeddedResource Include="Concatenate\Resources\Concatenate1.pdf" />
     <EmbeddedResource Include="Concatenate\Resources\Concatenate2.pdf" />
+    <None Include="app.config" />
     <None Include="packages.config" />
     <EmbeddedResource Include="Split\Resources\Split.pdf" />
     <EmbeddedResource Include="Sign\Resources\Sign.pdf" />
